--- a/client-fundraze/index.html
+++ b/client-fundraze/index.html
@@ -11,7 +11,7 @@
 
 
     <meta charset="UTF-8" />
-   <link rel="icon" type="image/png" href="/favicon.png" />
+   <link rel="icon" type="image/jpg" href="/favicon.jpg" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fundraze</title>
